# cs4220-coursework

project1/: README.txt  cleint  cleint.c  client  client.c  input_file.txt  makefile  server  server.c  server1  server1.c
project1/cleint.dSYM/Contents/: Info.plist
project1/cleint.dSYM/Contents/Resources/DWARF/: cleint
project1/cleint.dSYM/Contents/Resources/Relocations/aarch64/: cleint.yml
project1/client.dSYM/Contents/Resources/DWARF/: client
project1/client.dSYM/Contents/Resources/Relocations/aarch64/: client.yml
project1/client_files/: received.txt
project1/server.dSYM/Contents/Resources/DWARF/: server
project1/server.dSYM/Contents/Resources/Relocations/aarch64/: server.yml
project1/server1.dSYM/Contents/Resources/DWARF/: server1
project1/server1.dSYM/Contents/Resources/Relocations/aarch64/: server1.yml
project2/: client  client.c  server.c
project2/client.dSYM/Contents/Resources/DWARF/: client
project2/client.dSYM/Contents/Resources/Relocations/aarch64/: client.yml
project2/server.dSYM/Contents/Resources/Relocations/aarch64/: server.yml
project3/: CMakeLists.txt  Makefile  READEME.txt  client.c  server  server.c  server.key
project3/server.dSYM/Contents/Resources/DWARF/: server
